Modified the style, fixed background image not showing.

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ h2 {
   top: 0;
   z-index: 9999;
   height: 50px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .navbar ul {
@@ -68,7 +69,7 @@ h2 {
 /* Banner */
 .banner {
   height: 30rem;
-  background-image: url("./images/background.jpg");
+  background-image: url("../images/background.jpg");
   background-attachment: fixed;
   background-position: center bottom;
   background-repeat: no-repeat;
